3.Kubernetes/00.examples/Ingress/06-landing-svc-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: landing-svc
spec:
  selector:
    app: landing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
