3.Kubernetes/00.examples/Ingress/07-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gateway.local
      http:
        paths:
          - backend:
              serviceName: gateway-svc
              servicePort: 80
    - host: admin.local
      http:
        paths:
          - backend:
              serviceName: admin-svc
              servicePort: 80
    - host: landing.local
      http:
        paths:
          - backend:
              serviceName: landing-svc
              servicePort: 80
